crates/pixi-build-zig/src/snapshots/pixi_build_zig__build_script__test__build_script@cmdexe.snap
---
source: crates/pixi-build-zig/src/build_script.rs
expression: script
---
zig build --prefix %LIBRARY_PREFIX%

if errorlevel 1 exit 1
