crates/pixi-build-zig/src/snapshots/pixi_build_zig__build_script__test__build_script_with_extra_args@cmdexe.snap
---
source: crates/pixi-build-zig/src/build_script.rs
expression: script
---
zig build --prefix %LIBRARY_PREFIX% -Doptimize=ReleaseFast

if errorlevel 1 exit 1
